collab-electron/packages/components/src/Terminal/TerminalTab.css
@font-face {
	font-family: "Hack";
	src: url("/fonts/hacknerdmono-regular.ttf") format("truetype");
	font-weight: 400;
	font-style: normal;
}

@font-face {
	font-family: "Hack";
	src: url("/fonts/hacknerdmono-bold.ttf") format("truetype");
	font-weight: 700;
	font-style: normal;
}

@font-face {
	font-family: "Hack";
	src: url("/fonts/hacknerdmono-italic.ttf") format("truetype");
	font-weight: 400;
	font-style: italic;
}

@font-face {
	font-family: "Hack";
	src: url("/fonts/hacknerdmono-bolditalic.ttf") format("truetype");
	font-weight: 700;
	font-style: italic;
}

/* ============================================================================
   TERMINAL TAB
   ============================================================================ */

.terminal-tab-host {
	position: relative;
	width: 100%;
	height: 100%;
	flex-direction: column;
}

.terminal-tab {
	flex: 1;
	min-height: 0;
	width: 100%;
	display: flex;
	flex-direction: column;
	justify-content: flex-end;
}

.terminal-tab .xterm-viewport {
	background: transparent !important;
}

.terminal-tab .xterm .xterm-screen canvas {
	position: absolute;
	left: 4px;
	top: -10px;
}

.terminal-tab .xterm-decoration-overview-ruler {
	display: none !important;
}

/* Scrollbar styling for the xterm viewport */
.terminal-tab .xterm-viewport::-webkit-scrollbar {
	width: 7px;
}

.terminal-tab .xterm-viewport::-webkit-scrollbar-thumb {
	background: rgba(121, 121, 121, 0.4);
	border-radius: 4px;
}

.terminal-tab .xterm-viewport::-webkit-scrollbar-thumb:hover {
	background: rgba(121, 121, 121, 0.7);
}

